objects/Account.object
<CustomObject>
    <fields>
        <fullName>BD_ID__c</fullName>
        <externalId>true</externalId>
        <label>BD_ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Broker_Dealer_Category__c</fullName>
        <label>Broker/Dealer Category</label>
        <picklist>
            <picklistValues>
                <fullName>Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent B/D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance - Career</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance - Independent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wire - National</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wire - Regional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRD_Number__c</fullName>
        <description>This is created to fed by Discovery Load process</description>
        <externalId>true</externalId>
        <label>CRD Number</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Import_Source__c</fullName>
        <label>Import Source</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Misc_Phone__c</fullName>
        <label>Misc. Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Primary contact for Account.There can be only one primary contact for an Account.</description>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesLogix_Account_Id__c</fullName>
        <externalId>true</externalId>
        <label>SalesLogix Account Id</label>
        <length>12</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purge</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status_del__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purge</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_Type__c</fullName>
        <label>Sub Type</label>
        <picklist>
            <controllingField>Type</controllingField>
            <picklistValues>
                <fullName>Recruit A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recruit B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industry A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industry B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Type A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Type B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Type C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other C</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Toll_Free__c</fullName>
        <label>Toll-Free</label>
        <type>Phone</type>
    </fields>
    <listViews>
        <fullName>AllDBAs</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.DBA</value>
        </filters>
        <label>All DBAs</label>
    </listViews>
    <listViews>
        <fullName>Broker_Dealer_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Broker_Dealer</value>
        </filters>
        <label>Broker/Dealer Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyDBAs</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.DBA</value>
        </filters>
        <label>My DBAs</label>
    </listViews>
    <listViews>
        <fullName>NonDBAs</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>notEqual</operation>
            <value>Account.DBA</value>
        </filters>
        <label>Non DBAs</label>
    </listViews>
    <recordTypes>
        <fullName>Broker_Dealer</fullName>
        <active>true</active>
        <description>A broker/dealer business.</description>
        <label>Broker/Dealer</label>
    </recordTypes>
    <recordTypes>
        <fullName>DBA</fullName>
        <active>true</active>
        <description>&quot;Doing Business As&quot; account.</description>
        <label>DBA</label>
    </recordTypes>
    <recordTypes>
        <fullName>Individual_Account</fullName>
        <active>true</active>
        <description>The generic account for contacts not under a specific DBA.</description>
        <label>Individual Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Third_Party_Recruiting_Firm</fullName>
        <active>true</active>
        <description>Third Party Lead Sourcing Firms</description>
        <label>Third Party Recruiting Firm</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>